snapshots/truth__parse__tests__unexpected_token.snap
---
source: src/parse/tests.rs
expression: "expect_parse_error::<ast::Stmt>(\"unexpected\", \"int x = int;\").trim()"
---
error: unexpected token `;`
  ┌─ <input>:1:12
  │
1 │ int x = int;
  │            ^ unexpected token
  │
  = 
    Expected one of "("
